--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
 	</head>
 <body>
 	<div id="wrapper">
-		<h1>Hack Spots</h1>
+		<h1>Desk Spots</h1>
 		<div>
 			<ul class="nav">
-				<li><strong>The collected favorites of those who hack</strong></li>
+				<li><strong>A collection of desks looking for a hacker</strong></li>
 				<li><a href="#info">INFO</a> -</li>
 				<li><a href="http://jlord.github.com/sheetsee.js" target="_blank">POWERED BY SHEETSEE.JS</a> -</li>
-				<li><a href="http://www.github.com/jlord/hack-spots" target="_blank">GITHUB</a> -</li>
-				<li><a href="http://www.twitter.com/jllord" target="_blank">@JLLORD</a></li>
+				<li><a href="http://www.github.com/desk-spots/desk-spots.github.io" target="_blank">GITHUB</a> -</li>
 			</ul>
 		</div>
 		<div class="container">
@@ -46,15 +45,13 @@
 		<div id="info" class="container">
 			<h3>Contribute!</h3>
 			<div id="theNumberofSpots"></div>
-			<p>This website is hooked up to <a href="https://docs.google.com/spreadsheet/ccc?key=0Ao5u1U6KYND7dFVkcnJRNUtHWUNKamxoRGg4ZzNiT3c#gid=0" target="_blank">this Google Spreadsheet</a>, which I've shared, so click and add your favorite hack spots to the bottom of the list! For the map you'll need to <strong>get the lat and long</strong> of the spot, you can get that <a href="http://www.latlong.net/" target="_blank">here</a>. The locating of these places is helpful, so please try to fill out all the columns.</p> 
+      <p>Do you have a spare desk in your office and would like to add it to this list? We have a <a href="#">form</a> ready for you!</p>
 
 			<h3>Info</h3>
-			<p>When I'm visiting a new city I'd like to know which coffee shops have the best vibes, great coffee and are good for hunkering down and having a good hack. Yelp will tell you where the Starbucks is and Foursquare will tell you where your friend's have <em>been</em> - but did they like it and was it a grab in go place or a hack place? Plus, what about the people I don't follow on Foursquare or who can't check-in when in other countries?</p>
+      <p>This website is <strong>heavily</strong> inspired and influenced by <a href="http://www.twitter.com/jlord">@jlord</a>'s <a href="http://jlord.github.io/hack-spots">hack-spots</a> project. In fact, we just forked the code and repurposed it slightly to start showing available desks and coworking spaces instead of hack spots.</p>
+      <p>It spawned out of a conversation between @bru, @mrchrisadams, @benfold and @iotwatch, that exposed a common itch: as freelancers or start-ups we often find ourselves in the situation of having to look for a desk to work from or some office space with a set of characteristics...</p>
 
-			<p>Besides being a list I've wanted to have, it's a fantastic (or I think so) way of using <a href="http://jlord.github.io/sheetsee.js" target="_blank">sheetsee.js</a>, which is a little JavaScript library I've been working on. Sheetsee.js helps you hook a Google Spreadsheet (awesome for data and collaboration!) to a website to make data more visual (maps, tables, charts).</p>
-
-			<h3>Fork-n-Go</h3>
-			<p>This is a work-in-progress example of a fork-n-go project - which means, there is just a <a href="https://github.com/jlord/hack-spots" target="_blank">gh-pages branch in GitHub</a> for this project so when you fork it, you've got a live and hosted website instantly. BAM! Just copy the spreadsheet headers and create your own spreadsheet, swap out the spreadsheet key in index.html and commit those changes. BAM! You've got a live and hosted site with a spreadsheet you control. More on the <a href="http://www.github.com/jlord/hack-spots" target="_blank">readme</a>.</p>
+			<p>Besides being a list we needed, it's a good excuse to tinker with <a href="http://jlord.github.io/sheetsee.js" target="_blank">sheetsee.js</a>. Sheetsee.js helps you hook a Google Spreadsheet (awesome for data and collaboration!) to a website to make data more visual (maps, tables, charts).</p>
 		</div>
 	</div><!-- end wrapper -->
 
