--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 	<head>
-		<title>Hack Spots</title>
+		<title>Desk Spots</title>
 		<script type="text/javascript" src="js/ICanHaz.js"></script> 
 		<script type="text/javascript" src='http://api.tiles.mapbox.com/mapbox.js/v1.4.0/mapbox.js'></script>
 		<script type="text/javascript" src='js/jquery.js '></script>
 		<script type="text/javascript" src='js/tabletop.js'></script>
 		<script type="text/javascript" src='js/sheetsee.js'></script>
 		<script type="text/javascript" src='js/leaflet.markercluster.js'></script>
-		<link rel="shortcut icon" href="https://raw.github.com/jlord/hack-spots/master/favico.png"/>
+		<link rel="shortcut icon" href="https://raw.github.com/desk-spots/desk-spots.github.io/master/favico.png"/>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<link href='http://api.tiles.mapbox.com/mapbox.js/v1.4.0/mapbox.css' rel='stylesheet' />
@@ -26,7 +26,7 @@
 				<li><strong>A collection of desks looking for a hacker</strong></li>
 				<li><a href="#info">INFO</a> -</li>
 				<li><a href="http://jlord.github.com/sheetsee.js" target="_blank">POWERED BY SHEETSEE.JS</a> -</li>
-				<li><a href="http://www.github.com/desk-spots/desk-spots.github.io" target="_blank">GITHUB</a> -</li>
+				<li><a href="http://www.github.com/desk-spots/desk-spots.github.io" target="_blank">GITHUB</a></li>
 			</ul>
 		</div>
 		<div class="container">
@@ -40,7 +40,7 @@
 			<input id="tableFilter" type="text" placeholder="filter by.."></input>
 			<span class="clear button">Clear</span> <span class="resetMap button">Reset Map</span>
 			<span class="noMatches">no matches</span>
-			<div id="hackSpotsTable"></div>
+			<div id="DeskSpotsTable"></div>
 		</div>
 		<div id="info" class="container">
 			<h3>Contribute!</h3>
@@ -48,14 +48,14 @@
       <p>Do you have a spare desk in your office and would like to add it to this list? We have a <a href="#">form</a> ready for you!</p>
 
 			<h3>Info</h3>
-      <p>This website is <strong>heavily</strong> inspired and influenced by <a href="http://www.twitter.com/jlord">@jlord</a>'s <a href="http://jlord.github.io/hack-spots">hack-spots</a> project. In fact, we just forked the code and repurposed it slightly to start showing available desks and coworking spaces instead of hack spots.</p>
+      <p>This website is <strong>heavily</strong> inspired and influenced by <a href="http://www.twitter.com/jlord">@jlord</a>'s <a href="http://jlord.github.io/hack-spots">hack-spots</a> project. In fact, we just forked the code and repurposed it slightly to start showing available desks and coworking spaces instead of hacking spots.</p>
       <p>It spawned out of a conversation between @bru, @mrchrisadams, @benfold and @iotwatch, that exposed a common itch: as freelancers or start-ups we often find ourselves in the situation of having to look for a desk to work from or some office space with a set of characteristics...</p>
 
 			<p>Besides being a list we needed, it's a good excuse to tinker with <a href="http://jlord.github.io/sheetsee.js" target="_blank">sheetsee.js</a>. Sheetsee.js helps you hook a Google Spreadsheet (awesome for data and collaboration!) to a website to make data more visual (maps, tables, charts).</p>
 		</div>
 	</div><!-- end wrapper -->
 
-	<script id="hackSpotsTable" type="text/html">
+	<script id="deskSpotsTable" type="text/html">
 		<table>
 		<tr><th class="tHeader">Name</th><th class="tHeader">Address</th><th class="tHeader">City</th><th class="tHeader">State</th><th class="tHeader">Country</th><th class="">Elsewhere</th></tr>
 		  {{#rows}}
@@ -88,7 +88,7 @@
 	</script>
 
 	<script id="theNumberofSpots" type="text/html">
-		<p><strong><span class="red-text">{{numberOfSpots}}</span> hack spots strong!</p>
+		<p><strong><span class="red-text">{{numberOfSpots}}</span> desk spots strong!</p>
 	</script>
 
 	<script id="popUps" type="text/html">
@@ -128,8 +128,8 @@
 	  function showInfo(data) {
 	  	gData = data
 	  	// make the table, and the search bar
-	  	Sheetsee.makeTable(gData, "#hackSpotsTable")
-	  	Sheetsee.initiateTableFilter(gData, "#tableFilter", "#hackSpotsTable")
+	  	Sheetsee.makeTable(gData, "#deskSpotsTable")
+	  	Sheetsee.initiateTableFilter(gData, "#tableFilter", "#deskSpotsTable")
 
 	  	// when someone clicks on a row, highlight it and
 	  	// re-center the map
