--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<input id="tableFilter" type="text" placeholder="filter by.."></input>
 			<span class="clear button">Clear</span> <span class="resetMap button">Reset Map</span>
 			<span class="noMatches">no matches</span>
-			<div id="DeskSpotsTable"></div>
+			<div id="deskSpotsTable"></div>
 		</div>
 		<div id="info" class="container">
 			<h3>Contribute!</h3>
