add link to the twitter handles

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 			<h3>Info</h3>
       <p>This website is <strong>heavily</strong> inspired and influenced by <a href="http://www.twitter.com/jlord">@jlord</a>'s <a href="http://jlord.github.io/hack-spots">hack-spots</a> project. In fact, we just forked the code and repurposed it slightly to start showing available desks and coworking spaces instead of hacking spots.</p>
-      <p>It spawned out of a conversation between @bru, @mrchrisadams, @benfold and @iotwatch, that exposed a common itch: as freelancers or start-ups we often find ourselves in the situation of having to look for a desk to work from or some office space with a set of characteristics...</p>
+      <p>It spawned out of a conversation between <a href="http://www.twitter.com/bru">@bru</a>, <a href="http://www.twitter.com/mrchrisadams">@mrchrisadams</a>, <a href="http://www.twitter.com/benfold">@benfold</a> and <a href="http://www.twitter.com/iotwatch">@iotwatch</a>, that exposed a common itch: as freelancers or start-ups we often find ourselves in the situation of having to look for a desk to work from or some office space with a set of characteristics...</p>
 
 			<p>Besides being a list we needed, it's a good excuse to tinker with <a href="http://jlord.github.io/sheetsee.js" target="_blank">sheetsee.js</a>. Sheetsee.js helps you hook a Google Spreadsheet (awesome for data and collaboration!) to a website to make data more visual (maps, tables, charts).</p>
 		</div>
